@@ -4,6 +4,8 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- MemberDataTool: Changed property modes to 'w' and added 'fullname' property.
+
 - setup handlers: Improved content type registry handler.
   The 'insert-before' and 'insert-after' directives are now supported.
 
